Homework 1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: homework
spec:
   replicas: 3
   selector:
      matchLabels:
         app: homework
   strategy:
      type: Recreate
   template:
      metadata:
         labels:
            app: homework
      spec:
         containers:
         - name: homework
           image: xapepama/nginx:homework
           ports:
             - containerPort: 80
