Homework 1/ingress_0.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homework-ingress0
  namespace: testing3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/sergey/
          backend:
            serviceName: homework-service
            servicePort: 8000
