Homework 1/ingress_1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homework-ingress1
  namespace: testing3
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          backend:
            serviceName: homework-service
            servicePort: 8000
